Footer on mobile fixed

--- a/app/assets/stylesheets/components/_cocktails.scss
+++ b/app/assets/stylesheets/components/_cocktails.scss
@@ -6,7 +6,6 @@
     width: 350px;
   }
 
-
 }
 
 @media screen and (max-width:375px) {
@@ -36,8 +35,16 @@
     width: 260px;
   }
 
-
 }
+
+@media screen and (max-width:768px) {
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+    width: 335px;
+  }
+}
+
 
 
 
